third_party/blink/web_tests/external/wpt/webxr/idlharness.https.window-expected.txt
This is a testharness.js-based test.
FAIL idl_test setup promise_test: Unhandled rejection with value: object "WebIDLParseError: Syntax error at line 1471, since `interface CustomElementRegistry`:
 define(DOMString name, CustomElementConstructor constructor, optional ElementDefinitionOptions
                        ^ Trailing comma in arguments list"
FAIL Partial interface Navigator: original interface defined assert_true: Original interface should be defined expected true got false
PASS Partial dictionary WebGLContextAttributes: original dictionary defined
PASS Partial interface mixin WebGLRenderingContextBase: original interface mixin defined
Harness: the test ran to completion.

